; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/storage/extr_ene_ub6250.c_sd_scsi_mode_sense.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/storage/extr_ene_ub6250.c_sd_scsi_mode_sense.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.us_data = type { i64 }
%struct.scsi_cmnd = type { i32 }
%struct.ene_ub6250_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@__const.sd_scsi_mode_sense.mediaNoWP = private unnamed_addr constant [12 x i8] c"\0B\00\00\08\00\00q\C0\00\00\02\00", align 1
@__const.sd_scsi_mode_sense.mediaWP = private unnamed_addr constant [12 x i8] c"\0B\00\80\08\00\00q\C0\00\00\02\00", align 1
@USB_STOR_TRANSPORT_GOOD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.us_data*, %struct.scsi_cmnd*)* @sd_scsi_mode_sense to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sd_scsi_mode_sense(%struct.us_data* %0, %struct.scsi_cmnd* %1) #0 {
  %3 = alloca %struct.us_data*, align 8
  %4 = alloca %struct.scsi_cmnd*, align 8
  %5 = alloca %struct.ene_ub6250_info*, align 8
  %6 = alloca [12 x i8], align 1
  %7 = alloca [12 x i8], align 1
  store %struct.us_data* %0, %struct.us_data** %3, align 8
  store %struct.scsi_cmnd* %1, %struct.scsi_cmnd** %4, align 8
  %8 = load %struct.us_data*, %struct.us_data** %3, align 8
  %9 = getelementptr inbounds %struct.us_data, %struct.us_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.ene_ub6250_info*
  store %struct.ene_ub6250_info* %11, %struct.ene_ub6250_info** %5, align 8
  %12 = bitcast [12 x i8]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %12, i8* align 1 getelementptr inbounds ([12 x i8], [12 x i8]* @__const.sd_scsi_mode_sense.mediaNoWP, i32 0, i32 0), i64 12, i1 false)
  %13 = bitcast [12 x i8]* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %13, i8* align 1 getelementptr inbounds ([12 x i8], [12 x i8]* @__const.sd_scsi_mode_sense.mediaWP, i32 0, i32 0), i64 12, i1 false)
  %14 = load %struct.ene_ub6250_info*, %struct.ene_ub6250_info** %5, align 8
  %15 = getelementptr inbounds %struct.ene_ub6250_info, %struct.ene_ub6250_info* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %2
  %20 = getelementptr inbounds [12 x i8], [12 x i8]* %7, i64 0, i64 0
  %21 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %22 = call i32 @usb_stor_set_xfer_buf(i8* %20, i32 12, %struct.scsi_cmnd* %21)
  br label %27

23:                                               ; preds = %2
  %24 = getelementptr inbounds [12 x i8], [12 x i8]* %6, i64 0, i64 0
  %25 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %26 = call i32 @usb_stor_set_xfer_buf(i8* %24, i32 12, %struct.scsi_cmnd* %25)
  br label %27

27:                                               ; preds = %23, %19
  %28 = load i32, i32* @USB_STOR_TRANSPORT_GOOD, align 4
  ret i32 %28
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @usb_stor_set_xfer_buf(i8*, i32, %struct.scsi_cmnd*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
